# nft-mint-token-multichain

./: .gitignore  README.md
evm/: README.md  foundry.toml
evm/script/: Deploy.s.sol
evm/src/: MintNFT.sol  RewardToken.sol
evm/test/: MintNFT.t.sol
frontend/: .env.example  README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: EcosystemTabs.tsx  MintEvm.tsx  MintSolana.tsx  MintSui.tsx
frontend/lib/: abi.ts  chains.ts
solana/: Anchor.toml  README.md  package.json
solana/programs/mint_nft/: Cargo.toml
solana/programs/mint_nft/src/: lib.rs
solana/tests/: mint_nft.ts
sui/: Move.toml  README.md
sui/sources/: mint_nft.move  reward.move
