[package]
name = "mint_nft"
version = "0.1.0"
description = "NFT mint with SPL token reward"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
